--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@
 ### Renpy ###
 # Don't track content of these folders #
 ########################################
-cache/
-saves/
+game/cache/
+game/saves/
 
 
 # Compiled source #
