--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Created by https://www.toptal.com/developers/gitignore/api/renpy
 # Edit at https://www.toptal.com/developers/gitignore?templates=renpy
+# thank you toptal
 
 ### Renpy ###
 # Don't track content of these folders #
